src/styles/piano-roll.scss
$piano-roll-corner:           4px;
$piano-roll-timeline:          40px;
$piano-roll-spacing:         15px;
$piano-roll-keyboard-width: 125px;
$piano-roll-options-width:    0px;//30px;
.piano-roll {
  position: absolute;
  top: 15px;
  left: 15px;
  right: 15px;
  bottom: 15px;
}
.piano-roll-timeline {
  position: absolute;
  top: 0;
  left: $piano-roll-keyboard-width;
  right: 0;
  height: $piano-roll-timeline;

  border: 1px solid #000;
  border-bottom: 0;
  border-radius: $piano-roll-corner $piano-roll-corner 0 0;
  background: #333;

  > canvas {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    width: 100%;

    border-radius: $piano-roll-corner $piano-roll-corner 0 0;
  //height: 100%; // For some reason, causes skewed aspect ratio in chrome Nov 10th 2015 (AK)
  }
}
.piano-roll-timeline-overlay {
  position: absolute;
  top: 0;
  left: $piano-roll-keyboard-width;
  right: 0;
  height: $piano-roll-timeline;

  border-radius: $piano-roll-corner $piano-roll-corner 0 0;
  box-shadow: inset  1px 1px 2px #000,
              inset -1px 1px 2px #000;
  z-index: 2; // Above scroll-zone
  pointer-events: none;
}
.piano-roll-window {
  position: absolute;
  top: $piano-roll-timeline;
  left: $piano-roll-keyboard-width;
  right: 0;
  bottom: 0;

  border: 1px solid #000;
  border-radius: 0 0 $piano-roll-corner 0;
  background: #333;

  overflow: hidden;

  > canvas {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    width: 100%;

    border-radius: 0 0 0 $piano-roll-corner;
  //height: 100%; // For some reason, causes skewed aspect ratio in chrome Nov 10th 2015 (AK)
  }
}
.piano-roll-notes-wrapper{
  position: absolute;
  top: 0;
  left: 10px;
  right: 10px;
  bottom: 30px;
  z-index: 1;
}
.piano-roll-notes-slider,
.piano-roll-notes {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 1;
}
.piano-roll-notes-slider {
  &[min-height~="1350"] {
    .piano-roll-note {
      font-size: 10px;
      padding: 2px;
    }
  }
  &[min-height~="1450"] {
    .piano-roll-note {
      font-size: 11px;
      padding: 3px;
    }
  }
  &[max-height~="1275"] {
    .piano-roll-note {
      color: transparent;
    }
  }
  &[max-height~="1000"] {
    .piano-roll-note {
      border-radius: 1px;
    }
  }
}
.piano-roll-note {
  position: absolute;
  top: 0;
  left: 0;

  // border: 1px solid #000;
  border-radius: 2px;
  background: #F80;
  background-image: linear-gradient(to bottom, #F80 0%, #C60 100%);
  box-shadow: 0 0 3px #000;

  padding: 1px 2px;
  font-size: 9px;
  line-height: 1;
  color: #000;
  overflow: hidden;

  &:hover {
    background: #FC8;
    background-image: linear-gradient(to bottom, #FC8 0%, #F80 100%);
  }
}
.piano-roll-notes-overlay {
  position: absolute;
  top: $piano-roll-timeline;
  left: $piano-roll-keyboard-width;
  right: 0;
  bottom: 0;

  border-top: 1px solid #000;
  border-radius: 0 0 $piano-roll-corner 0;
  box-shadow: inset 0 -1px 5px 1px #000;
  z-index: 3; // Above scroll-zone
  pointer-events: none;
}
.piano-roll-selection-box {
  position: absolute;

  border: 1px solid rgba(255,255,255,0.500);
  background: rgba(255,255,255,0.050);
  box-shadow: 0 0 3px #000;
}
.piano-roll-options {
  position: absolute;
  top:    $piano-roll-spacing + $piano-roll-timeline;
  left:   $piano-roll-spacing;
  width:  $piano-roll-options-width;
  bottom: $piano-roll-spacing;

  border: 1px solid #000;
  border-right: 0;
  border-radius: $piano-roll-corner 0 0 $piano-roll-corner;
  background: #444;
  box-shadow: inset  1px  1px  2px rgba( 0, 0, 0, 0.25),
              inset  1px -1px  2px rgba( 0, 0, 0, 0.25);
  z-index: 2; // Above timeline's shadow

  display: flex;
  span {
    display: block;
    width: 100%;
    text-align: center;
    align-self: center;
  }
}
.piano-roll-keyboard {
  position: absolute;
  top: $piano-roll-timeline;
  left: 0;
  width: $piano-roll-keyboard-width - 1px;
  bottom: 0;
  box-sizing: content-box;

  border: 1px solid #000;
  border-right: 0;
  border-radius: $piano-roll-corner 0 0 $piano-roll-corner;
  z-index: 5; // Above the timeline
  background: #777;
  overflow: hidden;
}
.piano-roll-keyboard-overlay {
  position: absolute;
  top: $piano-roll-timeline;
  left: 0;
  width: $piano-roll-keyboard-width;
  bottom: 0;

  border-radius: $piano-roll-corner 0 0 $piano-roll-corner;
  box-shadow: inset 2px  3px 2px rgba(0,0,0,0.64),
              inset 2px -3px 2px rgba(0,0,0,0.64);
  z-index: 6; // Above keyboard
  pointer-events: none;
}
.piano-roll-keybed {
  position: absolute;
  right: 0;
  height: 1047px;
  width: 104.7px;
}
$total-keys:  88.00;
$octave-keys: 12.00;
$octave-thickness: percentage($octave-keys/$total-keys);
$key-thickness: percentage(1/$octave-keys);
$key-thickness-margin: percentage(1/$total-keys * 12.5); // Used for margins, which are are calculated based off of width rather than height.
.piano-roll-key {
  display: block;
  position: relative;
  box-sizing: border-box;
  cursor: pointer;
  border-top: 0px;
  height: $key-thickness;
  width: 100%;

  &.white {
    border: 1px solid #000;
    border-right: 0;
    border-top: 0;
    background: #CCC;
    background-image: linear-gradient(90deg, #999 20%, #CCC 21%, #999 100%);
    height: 1.75*$key-thickness;   // Make white keys thicker

    display: flex;
    padding-right: 5%; 
    .piano-roll-key-label {
      visibility: hidden;
      font-size: 10px;
      color: #000;
      align-self: center;
      text-align: right;
      width: 100%;
    }

    &.active,
    &:active {
      background: #A99;
      background-image: linear-gradient(90deg, #988 16%, #CBB 17%, #988 100%);
      box-shadow: inset 0 1px 3px 2px #544;
    }
  }
  &.black {
    position: relative;
    border-radius: 0 2px 2px 0;
    border: 1px solid #222;
    border-bottom-width: 2px;
    background: #222;
    z-index: 1;  // Above the white keys
    height: $key-thickness;    // ...try to cut a pixel off of black keys to prevent asymmetry
    width: 69%;

    &:after {
      content: '';
      display: block;
      position: absolute;
      top: 0;
      right: 8%;
      bottom: 0;
      left: 20%;
      border-radius: 0 20% 20% 0;
      background: #555;
    }
    &:before {
      content: '';
      display: block;
      position: absolute;
      top: -1px;
      left: 100%;
      width: 50%;
      bottom: -2px;

      background-image: linear-gradient(left, rgba(0,0,0,0.25) 0%, transparent 100%);
    }

    // Overlap the adjacent white keys (different amounts depending on where they are on the scale)
    margin: -0.5*$key-thickness-margin 0px -0.5*$key-thickness-margin 0px;
    &.higher {
      margin: -0.75*$key-thickness-margin 0px -0.25*$key-thickness-margin 0px;
    }
    &.lower {
      margin: -0.25*$key-thickness-margin 0px -0.75*$key-thickness-margin 0px;
    }

    &.active,
    &:active {
      border-color: #200;
      border-bottom-width: 1px;
      background: #200;

      &:after {
        left: 10%;
        background: #544;
        box-shadow: inset 0 1px 3px 2px #200;
      }
    }
  }

  &.thinner {
    height: 1.5 * $key-thickness;     // Certain white keys are sandwiched slightly differently to maintain proportions
  }

  &.compact {
    .piano-roll-key-label {
      font-size: 9px;
    }

    &:last-child {
      .piano-roll-key-label {
        visibility: hidden;
      }
    }
  }

  &:last-child {
    > .piano-roll-key-label {
      visibility: visible;
    }
  }
}
.piano-roll-octave {
  position: relative;
  height: $octave-thickness;
  //width: 100px; // Fixed width will 

  &:first-child {
    margin-top: 1px;
    height: percentage(1.0/$total-keys);

    .piano-roll-key {
      height: 100%;
    }
  }

  &:last-child {
    .piano-roll-key {
      &:last-child {
        height: 1.250 * $key-thickness;
        border-radius: 0 0 0 3px;
        border-bottom: 1px solid #000;
      }
    }
  }

  &:hover {
    .piano-roll-key-label {
      visibility: visible !important;
    }
    .piano-roll-key {
      &.black {
        &:before {
          display: none;
        }
      }
    }
  }
}
.piano-roll-octave-label {
  position: absolute;
  top: -1px;
  bottom: 0px;
  right: 100%;
  width: 100px;

  border: 1px solid #000;
  border-right: 0;

  font-size: 12px;
  color: #000;
  display: flex;
  > * {
    align-self: flex-end;
    width: 100%;
    padding-right: 4px;
    padding-bottom: 2px;
    text-align: right;
  }
}

.piano-roll-scroll-zone {
  position: absolute;
  height: 30px;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 2;

  padding: 10px;
  background-image: linear-gradient(to bottom, transparent 0%, #464646 50%);
  border-radius: 0 0 0 4px;

  transition: height 0.5s, padding 0.5s;
  transition-delay: 1s;

  &:hover {
    padding-top: 14px;
    height: 40px;
    transition: height 0.125s, padding 0.125s;
    transition-delay: 0s;
  }  
}

